crates/strider-analyze/tests/snapshots/v3__mips32le__memory__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4007c4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x4007a0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x9:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v14" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x400770:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v20" [color="#888888", style=dashed];
  "v20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v21" [color="#888888", style=dashed];
  "v21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x4007ec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v26" [color="#888888", style=dashed];
  "v26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v27" [color="#888888", style=dashed];
  "v27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v28" [color="#888888", style=dashed];
  "v28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x4007f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v33" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v33" [color="#888888", style=dashed];
  "v33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v34" [color="#888888", style=dashed];
  "v34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "29" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x400808:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v38" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v38" [color="#888888", style=dashed];
  "v38" -> "36" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "36" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" -> "36" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "42" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "36" -> "42" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x400814:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "42" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v46" [color="#888888", style=dashed];
  "v46" -> "42" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v47" [color="#888888", style=dashed];
  "v47" -> "42" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v48" [color="#888888", style=dashed];
  "v48" -> "42" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "49" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "42" -> "49" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "42" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v51" [color="#888888", style=dashed];
  "v51" -> "49" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v52" [color="#888888", style=dashed];
  "v52" -> "49" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v53" [color="#888888", style=dashed];
  "v53" -> "49" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "50" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v54" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v54" [color="#888888", style=dashed];
  "v54" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v55" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v55" [color="#888888", style=dashed];
  "v55" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "58" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "59" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v61" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v61" [color="#888888", style=dashed];
  "v61" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "36" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v62" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v62" [color="#888888", style=dashed];
  "v62" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v63" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v63" [color="#888888", style=dashed];
  "v63" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v64" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v64" [color="#888888", style=dashed];
  "v64" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v65" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v65" [color="#888888", style=dashed];
  "v65" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0xffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "67" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "68" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v70" [label="Post Call\nt0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v70" [color="#888888", style=dashed];
  "v70" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v73" [label="Post Call\nt1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v73" [color="#888888", style=dashed];
  "v73" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "22" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0xffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "75" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "75" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "76" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "78" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "80" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "83" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "84" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "84" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "83" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "8" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "8" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "86" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "84" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "86" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\na3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0xffffffc8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0xffffffb8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "89" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "89" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "90" -> "89" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v91" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v91" -> "89" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "92" -> "89" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "92" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "90" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "93" -> "90" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v94" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v94" -> "90" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "95" -> "90" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "95" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "93" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "96" -> "93" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v97" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v97" -> "93" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "93" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "98" -> "96" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v99" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v99" -> "96" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "100" -> "96" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "100" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "98" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "101" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v102" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v102" -> "98" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "103" -> "98" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "103" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "101" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "104" -> "101" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v105" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v105" -> "101" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "106" -> "101" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "106" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "104" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "107" -> "104" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "107" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
